[gd_scene load_steps=3 format=3 uid="uid://b5k8j2x9q7pnr"]

[ext_resource type="Script" path="res://ui/spell_item_selection_dialog.gd" id="1"]
[ext_resource type="Theme" uid="uid://c7q6510one1wh" path="res://ui/themes/Underkingdom.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.7, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="SpellItemSelectionDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -280.0
offset_right = 400.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainVBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "◆ SELECT ITEM ◆"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2

[node name="ContentHBox" type="HBoxContainer" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ItemPanel" type="PanelContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox/ItemPanel"]
layout_mode = 2

[node name="ItemList" type="VBoxContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox/ItemPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/MainVBox/ContentHBox"]
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoVBox" type="VBoxContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DescriptionLabel" type="Label" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/font_size = 13
text = "Item description will appear here."
autowrap_mode = 3
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.7, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "Stats will appear here."
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "↑↓ Navigate  |  Enter/E to select  |  ESC to cancel"
horizontal_alignment = 1
